[package]
name = "freepass-capi"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: C API"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/freepass"
repository = "https://github.com/myfreeweb/freepass"

[lib]
name = "freepass_capi"
crate-type = [ "dylib", "staticlib" ]

[dependencies]
freepass-core = { version = "0", path = "../core", default-features = false, features = [] }
secstr = { git = "https://github.com/myfreeweb/secstr.git", rev = "rustc_serialize", features = ["serde", "cbor-serialize", "libsodium-sys"] }
serde_cbor = "0.6"
sodiumoxide = "0"
rusterpassword = "0"
rusterpassword-capi = { version = "0", path = "../rusterpassword/capi" }
colorhash256 = "0"
libc = "0.2"

[replace]
"secstr:0.3.0" = { git = "https://github.com/myfreeweb/secstr.git", rev = "rustc_serialize", features = ["serde", "cbor-serialize", "libsodium-sys"] }
