[package]
name = "freepass-cli"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: CLI (command line interface)"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/freepass"
repository = "https://github.com/myfreeweb/freepass"

[[bin]]
name = "freepass"

[dependencies]
freepass-core = { version = "0", path = "../core" }
secstr = { version = "0.2.1", features = ["cbor-serialize", "libsodium-sys"] }
sodiumoxide = "0"
rusterpassword = "0"
colorhash256 = "0"
interactor = "0"
rustc-serialize = "0"
cbor = "0"
ansi_term = "0"
clap = "2"
