[package]
name = "freepass-cli"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: CLI (command line interface)"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/freepass"
repository = "https://github.com/myfreeweb/freepass"

[[bin]]
name = "freepass"

[dependencies]
freepass-core = { version = "0", path = "../core", features = ["keepass"] }
secstr = { version = "0.3", features = ["serde", "libsodium-sys"] }
sodiumoxide = "0"
rusterpassword = "0"
colorhash256 = "0"
interactor = "0.1.1"
serde = "1"
serde_cbor = "0.6"
base64 = "0"
hex = "0"
ansi_term = "0"
clap = "2"
fuse = "0.3"
