[package]
name = "freepass-core"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: core library"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/freepass"
repository = "https://github.com/myfreeweb/freepass"

[lib]
name = "freepass_core"

[features]
default = ["keepass", "filesystem"]
filesystem = ["fuse"]

[dependencies]
chrono = { version = "0", features = ["rustc-serialize"] }
secstr = { version = "0.2.1", features = ["cbor-serialize", "libsodium-sys"] }
libsodium-sys = "0"
sodiumoxide = "0"
rusterpassword = "0"
keepass = { version = "0", optional = true }
fuse = { git = "https://github.com/zargony/rust-fuse.git", optional = true } # XXX: BSD unmount fix haven't been released yet
time = { version = "0.1" }
libc = "0.2"
rand = "0"
cbor = "0"
rustc-serialize = "0"
byteorder = "0"

[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "ios")))'.dependencies]
unix_socket = "0"
