[package]
name = "freepass-core"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Security", "Password", "MasterPassword" ]
description = "Freepass password/auth manager: core library"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/freepass"
repository = "https://github.com/myfreeweb/freepass"

[lib]
name = "freepass_core"

[features]
default = ["keepass", "filesystem"]
filesystem = ["fuse"]

[dependencies]
chrono = "0.3"
secstr = { version = "0.3", features = ["serde", "libsodium-sys"] }
libsodium-sys = "0"
sodiumoxide = "0"
rust-crypto = "0.2"
rusterpassword = { version = "0", path = "../rusterpassword" }
keepass = { git = "https://github.com/myfreeweb/keepass-rs.git", optional = true }
fuse = { version = "0.3.0", optional = true }
time = { version = "0.1" }
libc = "0.2"
rand = "0"
serde = "1"
serde_derive = "1"
serde_bytes = "0"
serde_cbor = "0.6"
base64 = "0"
byteorder = "1"

[target.'cfg(all(unix, not(target_os = "android"), not(target_os = "ios")))'.dependencies]
unix_socket = "0"
